@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.avereon.pom</groupId>
 		<artifactId>prg</artifactId>
-		<version>3.1.0</version>
+		<version>3.3.3</version>
 		<relativePath/>
 	</parent>
 
@@ -17,7 +17,7 @@
 	<artifactId>xenon</artifactId>
 	<!-- To do a release, merge to the stage branch, update the version and then merge to the stable branch -->
 	<!-- Also update the version in the jpackage descriptors -->
-	<version>1.4</version>
+	<version>1.6-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Xenon</name>
@@ -70,7 +70,24 @@
 		<!-- Version numbers updated 02 Jul 2020 -->
 		<!-- Runtime dependencies -->
 		<reactfx.version>2.0-M5</reactfx.version>
-		<undofx.version>2.1.0</undofx.version>
+		<undofx.version>2.1.1</undofx.version>
+		<weave.version>[1.3-SNAPSHOT,)</weave.version>
+		<zenna.version>[0.7,)</zenna.version>
+		<zarra.version>[0.7,)</zarra.version>
+		<zevra.version>[0.8-SNAPSHOT,)</zevra.version>
+
+		<!-- Version numbers updated 11 Oct 2021 -->
+		<!-- Runtime dependencies -->
+		<controlsfx.version>[11.1,)</controlsfx.version>
+		<openjfx.version>[17.0,)</openjfx.version>
+
+		<!-- Test dependencies -->
+		<testfx.version>[4.0,)</testfx.version>
+		<monocle.version>jdk-12.0.1+2</monocle.version>
+
+		<!-- Build plugin versions -->
+		<cameo.version>2.9</cameo.version>
+		<curex.version>1.3</curex.version>
 	</properties>
 
 	<dependencies>
@@ -83,8 +100,8 @@
 
 		<dependency>
 			<groupId>com.avereon</groupId>
-			<artifactId>zerra</artifactId>
-			<version>${zerra.version}</version>
+			<artifactId>zarra</artifactId>
+			<version>${zarra.version}</version>
 		</dependency>
 
 		<dependency>
@@ -148,11 +165,36 @@
 			</exclusions>
 		</dependency>
 
-		<!--		<dependency>-->
-		<!--			<groupId>org.apache.commons</groupId>-->
-		<!--			<artifactId>commons-vfs2</artifactId>-->
-		<!--			<version>2.6.0</version>-->
-		<!--		</dependency>-->
+		<!-- Development dependencies -->
+		<!-- This need to stay in the provided scope so that the classes provided by
+		Xenon can be compiled and distributed. However, junit is not part of Xenon
+		and therefore is marked "provided". -->
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-api</artifactId>-->
+<!--			<version>${junit.version}</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-engine</artifactId>-->
+<!--			<version>${junit.version}</version>-->
+<!--		</dependency>-->
+
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>${assertj.version}</version>
+			<scope>test</scope>
+		</dependency>
 
 		<dependency>
 			<groupId>org.testfx</groupId>
@@ -160,7 +202,7 @@
 			<version>${testfx.version}</version>
 			<scope>test</scope>
 			<exclusions>
-				<!-- Exclude the openjfx libraries, they are already available -->
+				<!-- Exclude org.openjfx, it is already available -->
 				<exclusion>
 					<groupId>org.openjfx</groupId>
 					<artifactId>*</artifactId>
@@ -174,10 +216,15 @@
 			<version>${testfx.version}</version>
 			<scope>test</scope>
 			<exclusions>
-				<!-- Exclude the junit-jupiter-api, it is already available-->
+				<!-- Exclude org.junit.jupiter, it is already available-->
 				<exclusion>
 					<groupId>org.junit.jupiter</groupId>
-					<artifactId>junit-jupiter-api</artifactId>
+					<artifactId>*</artifactId>
+				</exclusion>
+				<!-- Exclude org.openjfx, it is already available -->
+				<exclusion>
+					<groupId>org.openjfx</groupId>
+					<artifactId>*</artifactId>
 				</exclusion>
 			</exclusions>
 		</dependency>
@@ -220,24 +267,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<!-- Version comes from parent -->
 				<configuration>
-					<!-- The argLine and systemPropertyVariables should match the failsafe configuration below -->
-					<argLine>
-						-Xmx128m
-						--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
-						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.asset=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.notice=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.product=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.task=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.guide=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.product=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.settings=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.ui.util=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.util=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.workpane=ALL-UNNAMED
-						--add-opens=com.avereon.xenon/com.avereon.xenon.workspace=ALL-UNNAMED
-					</argLine>
+					<argLine>-Xmx128m --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
 					<systemPropertyVariables>
 						<!-- Set testfx.setup.timeout to a reasonable time -->
 						<!-- This might be as low as 1000 for a fast computer -->
@@ -261,13 +291,25 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<mainClass>com.avereon.xenon.Launcher</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
+				<executions>
+					<execution>
+						<id>default-jar</id>
+						<configuration>
+							<archive>
+								<manifest>
+									<mainClass>com.avereon.xenon.Launcher</mainClass>
+								</manifest>
+							</archive>
+						</configuration>
+					</execution>
+					<execution>
+						<id>test-jar</id>
+						<phase>package</phase>
+						<goals>
+							<goal>test-jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
@@ -417,19 +459,10 @@
 							<modulePath>${project.build.directory}/dependency</modulePath>
 							<jars>
 								<jar>
-									<name>miglayout-core*.jar</name>
+									<name>fuzzywuzzy*.jar</name>
 								</jar>
 								<jar>
 									<name>image4j*.jar</name>
-								</jar>
-								<jar>
-									<name>miglayout-javafx*.jar</name>
-									<modules>
-										<module>javafx.base</module>
-										<module>javafx.graphics</module>
-										<module>javafx.controls</module>
-										<module>miglayout.core</module>
-									</modules>
 								</jar>
 								<jar>
 									<name>reactfx*.jar</name>
@@ -449,14 +482,6 @@
 						</configuration>
 					</execution>
 				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>14</source>
-					<target>14</target>
-				</configuration>
 			</plugin>
 
 		</plugins>
@@ -549,24 +574,7 @@
 									<forkCount>1</forkCount>
 									<reuseForks>false</reuseForks>
 									<runOrder>alphabetical</runOrder>
-									<argLine>
-										-Xmx128m
-										--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
-										--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.asset=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.notice=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.product=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.task=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.task.chain=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.tool=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.tool.guide=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.tool.product=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.tool.settings=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.util=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.workpane=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.workspace=ALL-UNNAMED
-									</argLine>
+									<argLine>-Xmx128m --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
 									<systemPropertyVariables>
 										<!-- Set testfx.setup.timeout to a reasonable time -->
 										<!-- This might be as low as 1000 for a fast computer -->
@@ -593,148 +601,6 @@
 		</profile>
 
 		<profile>
-			<id>assemblies</id>
-			<build>
-				<plugins>
-
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>exec-maven-plugin</artifactId>
-						<version>${maven.exec.version}</version>
-						<executions>
-							<execution>
-								<id>jlink</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>exec</goal>
-								</goals>
-								<configuration>
-									<executable>${java.home}/bin/jlink</executable>
-									<arguments>
-										<argument>--module-path</argument>
-										<argument>${jlink.module.path}</argument>
-										<argument>--add-modules</argument>
-										<argument>com.avereon.xenon</argument>
-										<argument>--output</argument>
-										<argument>${basedir}/target/jlink</argument>
-										<argument>--launcher</argument>
-										<argument>xenon=com.avereon.xenon/com.avereon.xenon.Launcher</argument>
-										<argument>--ignore-signing-information</argument>
-										<argument>--no-header-files</argument>
-										<argument>--no-man-pages</argument>
-										<argument>--strip-debug</argument>
-										<argument>--compress</argument>
-										<argument>2</argument>
-									</arguments>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<artifactId>maven-assembly-plugin</artifactId>
-						<executions>
-							<!-- Assemble the product pack -->
-							<execution>
-								<id>assembly-product</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<finalName>product</finalName>
-									<descriptorRefs>
-										<descriptorRef>product-${product.platform}</descriptorRef>
-									</descriptorRefs>
-									<ignoreMissingDescriptor>true</ignoreMissingDescriptor>
-								</configuration>
-							</execution>
-							<!-- Assemble the installer files -->
-							<execution>
-								<id>assembly-install</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>single</goal>
-								</goals>
-								<configuration>
-									<attach>false</attach>
-									<finalName>${product-pack-folder}</finalName>
-									<descriptorRefs>
-										<descriptorRef>install-${product.platform}</descriptorRef>
-									</descriptorRefs>
-									<appendAssemblyId>false</appendAssemblyId>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<!-- Copy extra installer resources -->
-					<plugin>
-						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-izpack-resources</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/izpack</directory>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/main/izpack</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
-								<id>copy-izpack-resources-filter</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/izpack</directory>
-											<filtering>true</filtering>
-											<excludes>
-												<exclude>bin</exclude>
-											</excludes>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/main/izpack</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
-								<id>copy-platform-resources</id>
-								<phase>post-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<resources>
-										<resource>
-											<directory>${basedir}/source/main/pack/${product.platform}</directory>
-											<excludes>
-												<exclude>bin</exclude>
-											</excludes>
-										</resource>
-									</resources>
-									<outputDirectory>${basedir}/target/pack/${product.platform}</outputDirectory>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
 			<id>packs</id>
 			<build>
 				<plugins>
@@ -745,8 +611,7 @@
 						<executions>
 							<execution>
 								<id>jpackage-option-files</id>
-								<!-- This can be put back to post-integration-test once assemblies profiles is removed -->
-								<phase>package</phase>
+								<phase>post-integration-test</phase>
 								<goals>
 									<goal>copy-resources</goal>
 								</goals>
